--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Tetracyl#0001",
   "license": "MIT",
   "dependencies": {
+    "covid19-us": "^1.0.3",
     "dblapi.js": "^2.4.0",
     "discord.js": "^12.0.1",
     "moment": "^2.24.0",
