--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Tetracyl#0001",
   "license": "MIT",
   "dependencies": {
+    "chart.js": "^2.9.3",
+    "chartjs-node-canvas": "^3.0.6",
     "covid19-us": "^1.0.3",
     "dblapi.js": "^2.4.0",
     "discord.js": "^12.0.1",
