--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: # Tetracyl
-custom: # [https://www.buymeacoffee.com/tetra]
+custom: # ['https://www.buymeacoffee.com/tetra']
