--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.9.3",
     "node-fetch": "^2.6.0",
+    "novelcovid": "^1.1.4",
     "snekfetch": "^4.0.4"
   }
 }
