--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "covid19-us": "^1.0.3",
     "dblapi.js": "^2.4.0",
     "discord.js": "^12.0.1",
+    "dotenv": "^8.2.0",
     "moment": "^2.24.0",
     "mongoose": "^5.9.3",
     "node-fetch": "^2.6.0",
