--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "chartjs-node-canvas": "^3.0.6",
     "coronacord-api-wrapper": "git+https://github.com/MrAugu/coronacord-api-wrapper.git",
     "covid19-us": "^1.0.3",
+    "covidapi": "^0.4.1",
+    "covidtracker": "^2.0.1",
     "dblapi.js": "^2.4.0",
     "discord.js": "^12.0.1",
     "dotenv": "^8.2.0",
