--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "author": "Tetracyl#0001",
   "license": "MIT",
   "dependencies": {
+    "@aero/centra": "^1.0.3",
     "chart.js": "^2.9.3",
     "chartjs-node-canvas": "^3.0.6",
     "coronacord-api-wrapper": "git+https://github.com/MrAugu/coronacord-api-wrapper.git",
     "covid19-us": "^1.0.3",
-    "covidapi": "^0.4.1",
+    "covidapi": "^0.4.2",
     "covidtracker": "^2.0.1",
     "dblapi.js": "^2.4.0",
     "discord.js": "^12.0.1",
